[GOJHW-6]: add swagger ui
